--- a/customfortress/download/maps/desktop.ini
+++ b/customfortress/download/maps/desktop.ini
@@ -2,3 +2,4 @@
 mvm_condemned_b3.bsp.bz2=@mvm_condemned_b3.bsp.bz2,0
 mvm_robotfactory_b30.bsp.bz2=@mvm_robotfactory_b30.bsp.bz2,0
 mvm_area_52_rc3.bsp.bz2=@mvm_area_52_rc3.bsp.bz2,0
+mvm_coldtown_rc1f.bsp.bz2=@mvm_coldtown_rc1f.bsp.bz2,0
