--- a/customfortress/maps/desktop.ini
+++ b/customfortress/maps/desktop.ini
@@ -3,3 +3,6 @@ mvm_condemned_b3.bsp.bz2=@mvm_condemned_b3.bsp.bz2,0
 mvm_robotfactory_b30.bsp.bz2=@mvm_robotfactory_b30.bsp.bz2,0
 mvm_area_52_rc3.bsp.bz2=@mvm_area_52_rc3.bsp.bz2,0
 mvm_coldtown_rc1f.bsp.bz2=@mvm_coldtown_rc1f.bsp.bz2,0
+zm_krusty_krab_a3_rev3_tf2.bsp.bz2=@zm_krusty_krab_a3_rev3_tf2.bsp.bz2,0
+zm_boatescape6_remix_tf2_2.bsp.bz2=@zm_boatescape6_remix_tf2_2.bsp.bz2,0
+zm_winter_helicopter_v2r_o_4_tf2.bsp.bz2=@zm_winter_helicopter_v2r_o_4_tf2.bsp.bz2,0
